tests/snapshots/cli_snapshots__transactions_list_table_fields_account_notes_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--fields\",\n\"date,name,amount,account,notes,id\",])"
---
╭────────────┬────────────┬──────────┬────────────────┬───────┬───────╮
│ date       ┆ name       ┆ amount   ┆ account        ┆ notes ┆ id    │
╞════════════╪════════════╪══════════╪════════════════╪═══════╪═══════╡
│ 2025-12-15 ┆ Venmo      ┆ -$100.00 ┆ Chase Checking ┆       ┆ txn_1 │
├╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ 2025-12-15 ┆ Amazon.com ┆  -$57.48 ┆ Amex Gold      ┆       ┆ txn_2 │
╰────────────┴────────────┴──────────┴────────────────┴───────┴───────╯
