tests/snapshots/cli_snapshots__transactions_list_table_filter_account_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--account\", \"chase\"])"
---
╭────────────┬───────┬──────────┬──────────┬──────────┬──────┬──────╮
│ date       ┆ name  ┆ amount   ┆ reviewed ┆ category ┆ tags ┆ type │
╞════════════╪═══════╪══════════╪══════════╪══════════╪══════╪══════╡
│ 2025-12-15 ┆ Venmo ┆ -$100.00 ┆          ┆ Other    ┆      ┆      │
╰────────────┴───────┴──────────┴──────────┴──────────┴──────┴──────╯
