tests/snapshots/cli_snapshots__transactions_list_table_filter_from_excludes_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--from\", \"2026-01-01\"])"
---
╭──────┬──────┬────────┬──────────┬──────────┬──────┬──────╮
│ date ┆ name ┆ amount ┆ reviewed ┆ category ┆ tags ┆ type │
╞══════╪══════╪════════╪══════════╪══════════╪══════╪══════╡
╰──────┴──────┴────────┴──────────┴──────────┴──────┴──────╯
