tests/snapshots/cli_snapshots__transactions_list_table_filter_from_to_range_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--from\", \"2025-12-01\", \"--to\", \"2025-12-31\",])"
---
╭────────────┬────────────┬──────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount   ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪══════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Venmo      ┆ -$100.00 ┆          ┆ Other    ┆          ┆      │
├╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┤
│ 2025-12-15 ┆ Amazon.com ┆  -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴──────────┴──────────┴──────────┴──────────┴──────╯
