tests/snapshots/cli_snapshots__transactions_list_table_filter_max_amount_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--max-amount\", \"60\"])"
---
╭────────────┬────────────┬─────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount  ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪═════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Amazon.com ┆ -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴─────────┴──────────┴──────────┴──────────┴──────╯
