tests/snapshots/cli_snapshots__transactions_list_table_filter_to_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"list\", \"--to\", \"2025-12-15\"])"
---
╭────────────┬────────────┬──────────┬──────────┬──────────┬──────────┬──────╮
│ date       ┆ name       ┆ amount   ┆ reviewed ┆ category ┆ tags     ┆ type │
╞════════════╪════════════╪══════════╪══════════╪══════════╪══════════╪══════╡
│ 2025-12-15 ┆ Venmo      ┆ -$100.00 ┆          ┆ Other    ┆          ┆      │
├╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌┤
│ 2025-12-15 ┆ Amazon.com ┆  -$57.48 ┆ ✓        ┆ Shops    ┆ Shopping ┆      │
╰────────────┴────────────┴──────────┴──────────┴──────────┴──────────┴──────╯
