tests/snapshots/cli_snapshots__transactions_search_by_category_name_snapshot.snap
---
source: tests/cli_snapshots.rs
expression: "run(&[\"transactions\", \"search\", \"other\"])"
---
╭────────────┬───────┬──────────┬──────────┬──────────┬──────┬──────╮
│ date       ┆ name  ┆ amount   ┆ reviewed ┆ category ┆ tags ┆ type │
╞════════════╪═══════╪══════════╪══════════╪══════════╪══════╪══════╡
│ 2025-12-15 ┆ Venmo ┆ -$100.00 ┆          ┆ Other    ┆      ┆      │
╰────────────┴───────┴──────────┴──────────┴──────────┴──────┴──────╯
